Added regexes to dynamic page #7

--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -34,3 +34,19 @@ body{
     padding: 0.3rem;
     border-radius: 5px;
 }
+
+ul {
+    list-style: none;
+    margin-left: 0;
+    padding-left: 0;
+  }
+
+li {
+    padding-left: 1em;
+    text-indent: -1em;
+  }
+
+li:before {
+    content: ">";
+    padding-right: 5px;
+  }
