--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <title>Cerbero Firewall</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='media/favicon.png') }}">
+    <title>>_CERBERO</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark mainNavbar">
