--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -10,12 +10,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark mainNavbar">
-      <div class="container-fluid"><a class="navbar-brand display-6 text-white ms-3 mt-1" style="font-size: 2rem;" href="#">Cerbero</a><button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
-          <a href="#" class="btn btn-outline-info text-white" id="buttonTest">Update</a>
-        </div>
-      </div>
+      <div class="container-fluid justify-content-center"><a class="navbar-brand display-6 text-white ms-3 mt-1" href="/"><center><img src="{{ url_for('static', filename='media/glitched_cerbero2.gif') }}"></center></a></div>
     </nav>
     <div class="container-fluid">
         <div class="row row-cols-auto mt-5 pt-5 justify-content-md-center">
